// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interviewer call pattern report with data matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
        class="breadcrumb"
      >
        <ol
          class="breadcrumb__items u-fs-s"
        >
          <li
            class="breadcrumb__item"
            id="breadcrumb-0"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Back
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="page__main u-mt-s"
        id="main-content"
      >
        <h1
          class="u-mb-m"
        >
          Run interviewer call pattern report
        </h1>
        <p
          aria-live="polite"
          class="u-fs-s"
        >
          Data in this report was last updated: 
          <b>
            <time
              datetime="2000-01-01T10:00:00.000Z"
              title="2000-01-01 10:00"
            >
              2 days ago
            </time>
             (01/01/2000 10:00:00)
          </b>
          .
        </p>
        <p
          class="u-fs-s"
        >
          This report only go back to the last 12 months.
        </p>
        <div
          class="u-mb-m"
        >
          <div
            class="panel panel--info panel--no-title  u-mt-m"
          >
            <div
              class="panel__body "
            >
              <p>
                Incomplete data is removed from this report. This will impact the accuracy of the report.
              </p>
              <p>
                The 
                <b>
                  Discounted invalid records
                </b>
                 entry will advise how many records have been removed.
              </p>
              <p>
                The 
                <b>
                  Invalid fields
                </b>
                 entry will advise which fields were incomplete.
              </p>
            </div>
          </div>
        </div>
        <div
          class="panel panel--error panel--no-title  u-mt-m"
          hidden=""
        >
          <div
            class="panel__body "
          />
        </div>
        <form
          class="u-mt-m"
        >
          <p>
            <div
              class="field"
            >
              <div
                class=""
              >
                <div
                  class=""
                >
                  <label
                    class="label"
                    for="interviewer"
                  >
                    Interviewer ID
                  </label>
                  <input
                    class="input input--text input-type__input u-mt-xs"
                    id="interviewer"
                    name="interviewer"
                    type="text"
                  />
                </div>
              </div>
            </div>
          </p>
          <div
            class="react-datepicker-wrapper"
          >
            <div
              class="react-datepicker__input-container"
            >
              <p
                class="field"
              >
                <label
                  class="label"
                  for="start-date"
                >
                  Start Date
                </label>
                <input
                  class="input input--text input-type__input "
                  data-testid="text-input"
                  id="start-date"
                  placeholder="Select Date"
                  style="z-index: 0;"
                  type="text"
                  value="03/01/2000"
                />
              </p>
            </div>
          </div>
          <br />
          <div
            class="react-datepicker-wrapper"
          >
            <div
              class="react-datepicker__input-container"
            >
              <p
                class="field"
              >
                <label
                  class="label"
                  for="end-date"
                >
                  End Date
                </label>
                <input
                  class="input input--text input-type__input "
                  data-testid="text-input"
                  id="end-date"
                  placeholder="Select Date"
                  style="z-index: 0;"
                  type="text"
                  value="03/01/2000"
                />
              </p>
            </div>
          </div>
          <br />
          <br />
          <button
            class="btn "
            data-testid="submit-call-pattern-form-button"
            type="submit"
          >
            <span
              class="btn__inner"
            >
              Run
            </span>
          </button>
        </form>
        <br />
        <a
          download="interviewer-call-pattern-"
          hidden=""
          href="data:text/csv;charset=utf-8,﻿
"
          target="_self"
        >
          Export report as Comma-Separated Values (CSV) file
        </a>
        <div
          class="panel panel--info panel--no-title  u-mt-m"
          hidden=""
        >
          <div
            class="panel__body "
          />
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
      class="breadcrumb"
    >
      <ol
        class="breadcrumb__items u-fs-s"
      >
        <li
          class="breadcrumb__item"
          id="breadcrumb-0"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Back
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="page__main u-mt-s"
      id="main-content"
    >
      <h1
        class="u-mb-m"
      >
        Run interviewer call pattern report
      </h1>
      <p
        aria-live="polite"
        class="u-fs-s"
      >
        Data in this report was last updated: 
        <b>
          <time
            datetime="2000-01-01T10:00:00.000Z"
            title="2000-01-01 10:00"
          >
            2 days ago
          </time>
           (01/01/2000 10:00:00)
        </b>
        .
      </p>
      <p
        class="u-fs-s"
      >
        This report only go back to the last 12 months.
      </p>
      <div
        class="u-mb-m"
      >
        <div
          class="panel panel--info panel--no-title  u-mt-m"
        >
          <div
            class="panel__body "
          >
            <p>
              Incomplete data is removed from this report. This will impact the accuracy of the report.
            </p>
            <p>
              The 
              <b>
                Discounted invalid records
              </b>
               entry will advise how many records have been removed.
            </p>
            <p>
              The 
              <b>
                Invalid fields
              </b>
               entry will advise which fields were incomplete.
            </p>
          </div>
        </div>
      </div>
      <div
        class="panel panel--error panel--no-title  u-mt-m"
        hidden=""
      >
        <div
          class="panel__body "
        />
      </div>
      <form
        class="u-mt-m"
      >
        <p>
          <div
            class="field"
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <label
                  class="label"
                  for="interviewer"
                >
                  Interviewer ID
                </label>
                <input
                  class="input input--text input-type__input u-mt-xs"
                  id="interviewer"
                  name="interviewer"
                  type="text"
                />
              </div>
            </div>
          </div>
        </p>
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <p
              class="field"
            >
              <label
                class="label"
                for="start-date"
              >
                Start Date
              </label>
              <input
                class="input input--text input-type__input "
                data-testid="text-input"
                id="start-date"
                placeholder="Select Date"
                style="z-index: 0;"
                type="text"
                value="03/01/2000"
              />
            </p>
          </div>
        </div>
        <br />
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <p
              class="field"
            >
              <label
                class="label"
                for="end-date"
              >
                End Date
              </label>
              <input
                class="input input--text input-type__input "
                data-testid="text-input"
                id="end-date"
                placeholder="Select Date"
                style="z-index: 0;"
                type="text"
                value="03/01/2000"
              />
            </p>
          </div>
        </div>
        <br />
        <br />
        <button
          class="btn "
          data-testid="submit-call-pattern-form-button"
          type="submit"
        >
          <span
            class="btn__inner"
          >
            Run
          </span>
        </button>
      </form>
      <br />
      <a
        download="interviewer-call-pattern-"
        hidden=""
        href="data:text/csv;charset=utf-8,﻿
"
        target="_self"
      >
        Export report as Comma-Separated Values (CSV) file
      </a>
      <div
        class="panel panel--info panel--no-title  u-mt-m"
        hidden=""
      >
        <div
          class="panel__body "
        />
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`interviewer call pattern report without data matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
        class="breadcrumb"
      >
        <ol
          class="breadcrumb__items u-fs-s"
        >
          <li
            class="breadcrumb__item"
            id="breadcrumb-0"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Back
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="page__main u-mt-s"
        id="main-content"
      >
        <h1
          class="u-mb-m"
        >
          Run interviewer call pattern report
        </h1>
        <p
          aria-live="polite"
          class="u-fs-s"
        >
          Data in this report was last updated: 
          <b>
            Invalid Date
          </b>
          .
        </p>
        <p
          class="u-fs-s"
        >
          This report only go back to the last 12 months.
        </p>
        <div
          class="u-mb-m"
        >
          <div
            class="panel panel--info panel--no-title  u-mt-m"
          >
            <div
              class="panel__body "
            >
              <p>
                Incomplete data is removed from this report. This will impact the accuracy of the report.
              </p>
              <p>
                The 
                <b>
                  Discounted invalid records
                </b>
                 entry will advise how many records have been removed.
              </p>
              <p>
                The 
                <b>
                  Invalid fields
                </b>
                 entry will advise which fields were incomplete.
              </p>
            </div>
          </div>
        </div>
        <div
          class="panel panel--error panel--no-title  u-mt-m"
          hidden=""
        >
          <div
            class="panel__body "
          />
        </div>
        <form
          class="u-mt-m"
        >
          <p>
            <div
              class="field"
            >
              <div
                class=""
              >
                <div
                  class=""
                >
                  <label
                    class="label"
                    for="interviewer"
                  >
                    Interviewer ID
                  </label>
                  <input
                    class="input input--text input-type__input u-mt-xs"
                    id="interviewer"
                    name="interviewer"
                    type="text"
                  />
                </div>
              </div>
            </div>
          </p>
          <div
            class="react-datepicker-wrapper"
          >
            <div
              class="react-datepicker__input-container"
            >
              <p
                class="field"
              >
                <label
                  class="label"
                  for="start-date"
                >
                  Start Date
                </label>
                <input
                  class="input input--text input-type__input "
                  data-testid="text-input"
                  id="start-date"
                  placeholder="Select Date"
                  style="z-index: 0;"
                  type="text"
                  value="03/01/2000"
                />
              </p>
            </div>
          </div>
          <br />
          <div
            class="react-datepicker-wrapper"
          >
            <div
              class="react-datepicker__input-container"
            >
              <p
                class="field"
              >
                <label
                  class="label"
                  for="end-date"
                >
                  End Date
                </label>
                <input
                  class="input input--text input-type__input "
                  data-testid="text-input"
                  id="end-date"
                  placeholder="Select Date"
                  style="z-index: 0;"
                  type="text"
                  value="03/01/2000"
                />
              </p>
            </div>
          </div>
          <br />
          <br />
          <button
            class="btn "
            data-testid="submit-call-pattern-form-button"
            type="submit"
          >
            <span
              class="btn__inner"
            >
              Run
            </span>
          </button>
        </form>
        <br />
        <a
          download="interviewer-call-pattern-"
          hidden=""
          href="data:text/csv;charset=utf-8,﻿
"
          target="_self"
        >
          Export report as Comma-Separated Values (CSV) file
        </a>
        <div
          class="panel panel--info panel--no-title  u-mt-m"
          hidden=""
        >
          <div
            class="panel__body "
          />
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
      class="breadcrumb"
    >
      <ol
        class="breadcrumb__items u-fs-s"
      >
        <li
          class="breadcrumb__item"
          id="breadcrumb-0"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Back
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="page__main u-mt-s"
      id="main-content"
    >
      <h1
        class="u-mb-m"
      >
        Run interviewer call pattern report
      </h1>
      <p
        aria-live="polite"
        class="u-fs-s"
      >
        Data in this report was last updated: 
        <b>
          Invalid Date
        </b>
        .
      </p>
      <p
        class="u-fs-s"
      >
        This report only go back to the last 12 months.
      </p>
      <div
        class="u-mb-m"
      >
        <div
          class="panel panel--info panel--no-title  u-mt-m"
        >
          <div
            class="panel__body "
          >
            <p>
              Incomplete data is removed from this report. This will impact the accuracy of the report.
            </p>
            <p>
              The 
              <b>
                Discounted invalid records
              </b>
               entry will advise how many records have been removed.
            </p>
            <p>
              The 
              <b>
                Invalid fields
              </b>
               entry will advise which fields were incomplete.
            </p>
          </div>
        </div>
      </div>
      <div
        class="panel panel--error panel--no-title  u-mt-m"
        hidden=""
      >
        <div
          class="panel__body "
        />
      </div>
      <form
        class="u-mt-m"
      >
        <p>
          <div
            class="field"
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <label
                  class="label"
                  for="interviewer"
                >
                  Interviewer ID
                </label>
                <input
                  class="input input--text input-type__input u-mt-xs"
                  id="interviewer"
                  name="interviewer"
                  type="text"
                />
              </div>
            </div>
          </div>
        </p>
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <p
              class="field"
            >
              <label
                class="label"
                for="start-date"
              >
                Start Date
              </label>
              <input
                class="input input--text input-type__input "
                data-testid="text-input"
                id="start-date"
                placeholder="Select Date"
                style="z-index: 0;"
                type="text"
                value="03/01/2000"
              />
            </p>
          </div>
        </div>
        <br />
        <div
          class="react-datepicker-wrapper"
        >
          <div
            class="react-datepicker__input-container"
          >
            <p
              class="field"
            >
              <label
                class="label"
                for="end-date"
              >
                End Date
              </label>
              <input
                class="input input--text input-type__input "
                data-testid="text-input"
                id="end-date"
                placeholder="Select Date"
                style="z-index: 0;"
                type="text"
                value="03/01/2000"
              />
            </p>
          </div>
        </div>
        <br />
        <br />
        <button
          class="btn "
          data-testid="submit-call-pattern-form-button"
          type="submit"
        >
          <span
            class="btn__inner"
          >
            Run
          </span>
        </button>
      </form>
      <br />
      <a
        download="interviewer-call-pattern-"
        hidden=""
        href="data:text/csv;charset=utf-8,﻿
"
        target="_self"
      >
        Export report as Comma-Separated Values (CSV) file
      </a>
      <div
        class="panel panel--info panel--no-title  u-mt-m"
        hidden=""
      >
        <div
          class="panel__body "
        />
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
